juniper-from-schema/tests/compile_fail/unknown_directive.stderr
error: proc macro panicked
  --> tests/compile_fail/unknown_directive.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     type Query {
6  | |         string: String! @someDirectiveThatIsntNotSupported
7  | |     }
8  | |
9  | |     schema { query: Query }
10 | | }
   | |_^
   |
   = help: message:

           error: Unknown directive
            --> schema:1:31
             |
           1 |    type Query { string : String! @ someDirectiveThatIsntNotSupported } schema
             |                                  ^

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> tests/compile_fail/unknown_directive.rs:14:6
   |
14 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
